Finished docker setting.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>圖文管理系統</title>
+        <style>
+            * {font-family: Arial, Helvetica, sans-serif}
+        </style>
     </head>
 
     <body onload="init();">
